--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,38 @@
-.main{
+.main {
     margin: 0 auto;
-   }
-   
-  .main h1{
+}
+
+.main h1 {
     color: rgb(255, 255, 255);
-    background: linear-gradient(rgb(116, 232, 108),green );
+    background: linear-gradient(rgb(116, 232, 108), green);
     height: 110px;
     text-align: center;
-    padding-top:15px ;
+    padding-top: 15px;
     font-weight: bold;
     font-size: 60px;
     -webkit-text-stroke: 3px rgb(0, 0, 0);
-  }
-   
-  form{
+}
+
+form {
     text-align: center;
     font-size: 25px;
-  }
-  input{
-    width: 450px;
-    height: 50px;
-    box-shadow:  3px 3px gray;
-    margin: 10px;
-  }
+}
 
-  .list-group {
-    max-width: 100%; 
-    width: 552px;  
+input {
+    width: 100%; 
+    max-width: 450px; 
+    height: 50px;
+    box-shadow: 3px 3px gray;
+    margin: 10px;
+    padding: 10px; 
+}
+
+.list-group {
+    max-width: 100%;
+    width: 100%; 
+    max-width: 552px; 
     font-size: 2rem;
-    margin: 15px auto; 
+    margin: 15px auto;
 }
 
 .list-group li {
@@ -40,10 +44,43 @@
 }
 
 
-@media (max-width: 600px) {
-    .list-group {
-        width: 90%; 
-        font-size: 1.5rem; 
+@media (max-width: 768px) {
+    .main h1 {
+        font-size: 40px; 
+        height: auto; 
+    }
+
+    form {
+        font-size: 20px; 
+    }
+
+    input {
+        font-size: 18px; 
+    }
+
+    .list-group li {
+        font-size: 24px; 
     }
 }
+
+@media (max-width: 480px) {
+    .main h1 {
+        font-size: 30px; 
+    }
+
+    form {
+        font-size: 18px; 
+    }
+
+    input {
+        height: 40px; 
+        font-size: 16px;
+    }
+
+    .list-group li {
+        font-size: 20px; 
+    }
+}
+
+
 
